--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ python:
     -"3.5"
 
 install:
-    -pip install unittest    
+    -pip install unittest
+    -pip install rpn    
 script:
     -python3 -m unittest
 
